--- a/lab-1-1-basics.ipynb
+++ b/lab-1-1-basics.ipynb
@@ -450,9 +450,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Nearest Neighbors Classifier\n",
+    "### Creating a k-Nearest Neighbors Classifier\n",
     "\n",
-    "Now that we've explored the data a little bit, we're going to use scikit-learn to create a nearest neighbors classifier for the data. Effectively we'll be developing a model whose job it is to build a relationship over input feature data (sepal and petal characteristics) that predicts the iris sample class (e.g. \"setosa\"). This is an example of a *supervised learning* task; we have all the features and all the target classes.\n",
+    "Now that we've explored the data a little bit, we're going to use scikit-learn to create a k-nearest neighbors classifier for the data. Effectively we'll be developing a model whose job it is to build a relationship over input feature data (sepal and petal characteristics) that predicts the iris sample class (e.g. \"setosa\"). This is an example of a *supervised learning* task; we have all the features and all the target classes.\n",
+    "\n",
+    "Nearest neightbors classifiers are quite simple. They predict the class of a new data sample based off the *nearest* data points to that sample. The 'nearest' metric is calculated via a distance function (often [Euclidean distance](https://en.wikipedia.org/wiki/Euclidean_distance)). \n",
+    "\n",
+    "<img src=\"img/knn.png\" width=200>\n",
+    "\n",
+    "For example, in the above diagram, suppose we are looking to classify the green circle as either a red triangle, or a blue square. If k = 1 (i.e., we look at one neighbor), our model would predict *red triangle*. If k=2, it would still predict *red triangle*. If k=3, the model would predict *red triangle* as it is the *majority* class of the 3 nearest neighbors. It isn't until k=5 that the algorithm actually predicts *blue square*.\n",
     "\n",
     "Model creation in scikit-learn follows a **data prep -> fit -> predict** process. The \"fit\" function is where the actual model is trained and parameter values are selected, while the \"predict\" function actually takes the trained model and applies it to the new samples.\n",
     "\n",
@@ -607,9 +613,9 @@
     "We see that our classifier has achieved 100% accuracy (and both calculation methods agree)!\n",
     "\n",
     "**DISCUSSION:** \n",
-    "* Why do you think the model was able to achieve such a \"great\" result? \n",
-    "* What does this really tell us? \n",
-    "* Do you expect the model to perform this well on new data?"
+    "* Why do you think the model was able to achieve such a \"great\" result? ______________________\n",
+    "* What does this really tell us?  __________________________________\n",
+    "* Do you expect the model to perform this well on new data? __________________________________"
    ]
   },
   {
