--- a/lab-1-1-basics.ipynb
+++ b/lab-1-1-basics.ipynb
@@ -456,7 +456,7 @@
     "\n",
     "Nearest neightbors classifiers are quite simple. They predict the class of a new data sample based off the *nearest* data points to that sample. The 'nearest' metric is calculated via a distance function (often [Euclidean distance](https://en.wikipedia.org/wiki/Euclidean_distance)). \n",
     "\n",
-    "<img src=\"img/knn.png\" width=200>\n",
+    "<img src=\"img/knn.png\" alt=\"knn\" width=\"200\"/>\n",
     "\n",
     "For example, in the above diagram, suppose we are looking to classify the green circle as either a red triangle, or a blue square. If k = 1 (i.e., we look at one neighbor), our model would predict *red triangle*. If k=2, it would still predict *red triangle*. If k=3, the model would predict *red triangle* as it is the *majority* class of the 3 nearest neighbors. It isn't until k=5 that the algorithm actually predicts *blue square*.\n",
     "\n",
