--- a/lab-2-1-trees.ipynb
+++ b/lab-2-1-trees.ipynb
@@ -34,20 +34,31 @@
    "source": [
     "### Decision Trees\n",
     "\n",
-    "Decision trees are popular supervised learning methods used for classification and regression. The tree represents a series of simple decision rules that predict the target properly when the feature vector is passed through them. Decision trees are easy to understand, can be visualized nicely, require very little data preparation (e.g., we don't need to scale features), and the trained model can be explained easily to others post priori (as opposed to other *black box* methods that are difficult to communicate).  \n",
+    "Decision trees are popular supervised learning methods used for classification and regression. The tree represents a series of simple decision rules that predict the target when the feature vector is passed through them. Decision trees are easy to understand, can be visualized nicely, require very little data preparation (e.g., we don't need to scale features), and the trained model can be explained easily to others post priori (as opposed to other *black box* methods that are difficult to communicate).  \n",
     "\n",
-    "In this lab, we will be exploring the use of decision trees in the context of Kaggle's famous **Titanic dataset**. Each row in the data represents a passenger, detailing various characteristics about them (i.e., the features), and also details whether or not the passenger survived the disaster. \n",
+    "###### Example\n",
+    "Suppose you wanted to wanted to design a simple decision tree for whether (or not) you buy a used car. You might develop something like the following:\n",
     "\n",
-    "Let's load the data and take a look at it.\n",
+    "<img src=\"img/decision-tree.gif\" width=\"500\"/>\n",
+    "\n",
+    "**YOUR TURN:** Let's say you're browsing Kijiji and come across a used car that: has been road tested, has high mileage, and is a recent year/model.\n",
+    "* According to your decision tree model, should you buy this car or not? ____________________________\n",
+    "* Will you buy any cars that haven't been road tested (if you follow your model)? ___________________________________\n",
+    "\n",
+    "Obviously this tree may not be ideal, depending on the situation. For example, you could have a road tested car of a recent year with 2,000,000 km's on it and the model is telling you to buy! (But, you probably shouldn't)\n",
     "\n",
     "##### Titanic Survivor Dataset\n",
+    "\n",
+    "In this lab, we will be exploring the use of decision trees in the context of Kaggle's famous **Titanic dataset**. Each row in the data represents a passenger, detailing various characteristics about them (i.e., the features), and also details whether or not the passenger survived the disaster.\n",
+    "\n",
+    "Let's load the data and take a look at it.\n",
     "\n",
     "To get the data into a manageable format, we're going to use the [Pandas](https://pandas.pydata.org/) library, a popular library for data manipulation and analysis. While we won't be providing a full Pandas tutorial, we will provide some insight into key functions.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +210,7 @@
        "5                0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,14 +225,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above cell used the `.read_csv()` function in Pandas to pull in the comma-separated Titanic survivor data. The `.head()` allows us to conveniently take a glance at the first 5 rows (along with the header). \n",
+    "The above cell used the `.read_csv()` function in Pandas to pull in the comma-separated Titanic survivor data (this is a very powerful/popular function!). The `.head()` allows us to conveniently take a glance at the first 5 rows (along with the header). \n",
     "\n",
-    "We can see that, along with the target 'Survived', we have a number of features inclduing the passenger name, sex, age, fare, cabin, etc. We can do a bit of simple exploratory data analysis (EDA) to get a better feel for the dataset."
+    "We can see that, along with the target 'Survived', we have a number of features including the passenger name, sex, age, fare, cabin, etc. We can do a bit of simple *exploratory data analysis* (EDA) to get a better feel for the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
