--- a/lab-2-1-trees.ipynb
+++ b/lab-2-1-trees.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "5                0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,14 +301,14 @@
    "source": [
     "##### Data Preparation: Categorical -> Numerical Mapping\n",
     "\n",
-    "Before we can fit sklearn decision trees to our data, we first need to convert all of the categorical variables (e.g., gender) numerical values. Categoricals with unique values (like name and ticket #) can be removed from the dataset entirely as don't suspect they will contribute to the model.\n",
+    "Before we can fit sklearn decision trees to our data, we first need to convert all of the categorical variables (e.g., gender) numerical values. Categoricals with unique values (like name and ticket #) can be removed from the dataset entirely as we don't suspect they will contribute to the model.\n",
     "\n",
     "We can do the required preparation as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -416,18 +416,19 @@
        "5                   0       3    1  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn import preprocessing\n",
-    "data = data.drop(['Name', 'Ticket', 'Cabin', 'Embarked'], axis=1)\n",
+    "\n",
+    "data = data.drop(['Name', 'Ticket', 'Cabin', 'Embarked'], axis=1) # remove unimportant columns\n",
     "\n",
     "le = preprocessing.LabelEncoder()\n",
     "le.fit(data['Sex'])\n",
-    "data['Sex'] = le.transform(data['Sex'])\n",
+    "data['Sex'] = le.transform(data['Sex']) \n",
     "\n",
     "data.head()"
    ]
@@ -436,18 +437,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above cell, we dropped a number of columns we don't suspect will be correlated with the target (*Note: we probably should have been a bit more rigorous about this!*). Then we used the `LabelEncoder()` within sklearn that can fit a numbering scheme to a categorical feature (i.e., sex). We can see in the new dataset, sex takes on a value of 0 (female) or 1 (male).\n",
+    "In the above cell, we dropped a number of columns we don't suspect will be correlated with the target (*Note: we probably should have been a bit more rigorous about this!*). Then we used the `LabelEncoder()` within sklearn that can fit a numbering scheme to a categorical feature (i.e., 'Sex'). We can see in the new dataset, sex takes on a value of 0 (female) or 1 (male).\n",
     "\n",
     "##### Model Development\n",
     "\n",
-    "OK! Let's get to developing some tree-based models to predict passenger survival. We will start with simple decision trees and develop more complex models from there. Our first step, as in previous labs, is to split our data into a training set and a test set (unseen data). We will then use k-folds cross validation on the training set to try and get the best performing model before finally applying it to the test data.\n",
+    "OK! Let's get to developing some decision tree models to predict passenger survival. We will start with simple decision trees and develop more complex models from there. Our first step, as in previous labs, is to split our data into a training set and a test set (unseen data). We will then use k-folds cross validation on the training set to try and get the best performing model before finally applying it to the test data.\n",
     "\n",
-    "Let's import sklearn's decision tree classifer and split the data. We also need "
+    "Let's import sklearn's decision tree classifer and split the data (using techniques we covered in the first lab)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,11 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Your code here\n",
+    "## \n",
     "##\n",
     "##"
    ]
@@ -490,12 +492,21 @@
     "\n",
     "Before we can fit our decision tree to our training data, we can conduct *imputation* to replace missing values with the mean/median/mode value in the column. For this exercise we will conduct mode imputation (i.e., the most common value in the column). \n",
     "\n",
-    "It's important that you don't impute your data using some of the test data! This is an example of *information leak* where your test data is leaking into your training data. As such, we will fit our missing data imputer to our training data only."
+    "**YOUR TURN:** Assuming we have a feature vector with three rows where 'nan' is a missing value:\n",
+    "X = [[1, 2, 3],\n",
+    "     [1, 2, nan],\n",
+    "     [2, 3, 2]]\n",
+    "* Which sample has a missing value? (the 1st, 2nd or 3rd?) ______________________________\n",
+    "* If we *impute* (i.e., replace the missing value with another value) using the mean (average), what value will go in place of the nan value? __________________________________\n",
+    "\n",
+    "It's important that you don't impute your data using statistics including the the test data! This is an example of *information leak* where your test data is leaking into your training data. \n",
+    "\n",
+    "As such, we will fit our missing data imputer to our training data only."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,25 +521,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we've got our data prepared, let's fit a decision tree to our training data. Remember, the pipeline for model development in sklearn is **initialize->fit->predict**."
+    "So we've got our data prepared, let's fit a decision tree to our training data. \n",
+    "\n",
+    "Remember, the pipeline for model development in sklearn is **initialize->fit->predict**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.76 (+/- 0.05)\n"
+      "Accuracy: 0.75 (+/- 0.03)\n"
      ]
     }
    ],
    "source": [
-    "clf = tree.DecisionTreeClassifier()\n",
-    "scores = cross_val_score(clf, X_train, y_train, cv=5)\n",
+    "clf = tree.DecisionTreeClassifier() \n",
+    "scores = cross_val_score(clf, X_train, y_train, cv=5) \n",
     "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
    ]
   },
@@ -536,20 +549,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above cell, we defined a Decision Tree classifier and used 5-folds cross validation to evaluate it. The resulting accuracy was ~75%.\n",
+    "In the above cell, we defined a Decision Tree classifier and used 5-folds cross validation to evaluate it. The resulting accuracy was ~75-77%.\n",
     "\n",
     "**YOUR TURN:**\n",
-    "* If you designed a naive classifier that simply guessed 'did not survive' on the training set, how would it perform? ________________________\n",
+    "* If you designed a naive classifier that simply guessed 'did not survive' (i.e., Survived = 0) for every row in the training set, how would it perform? ________________________\n",
     "* Is this better or worse than our decision tree? ____________________________"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Your code here\n",
+    "##\n",
     "##\n",
     "##"
    ]
