changes to lab 2-2

--- a/lab-2-2-pca.ipynb
+++ b/lab-2-2-pca.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# UofT FASE ML Bootcamp\n",
-    "#### \n",
+    "#### Tuesday August 20, 2019\n",
     "#### Basic Principles and Models - Lab 2, Day 2 \n",
     "#### Teaching team: Elias Khalil, Kyle E. C. Booth, and Alex Olson \n",
     "##### Lab author: Alexander Olson, aolson@mie.utoronto.ca"
@@ -33,7 +33,6 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns; sns.set()  # for plot styling\n",
     "import numpy as np\n",
     "from sklearn.datasets.samples_generator import make_blobs\n",
     "from sklearn.cluster import KMeans"
@@ -137,12 +136,12 @@
     "        if np.all(centers == new_centers):\n",
     "            break\n",
     "        centers = new_centers\n",
-    "    \n",
+    "        plt.scatter(X[:, 0], X[:, 1], c=labels,\n",
+    "                    s=50, cmap='viridis');\n",
+    "        plt.pause(0.05)\n",
     "    return centers, labels\n",
     "\n",
-    "centers, labels = find_clusters(X, 4)\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=labels,\n",
-    "            s=50, cmap='viridis');\n"
+    "centers, labels = find_clusters(X, 4)\n"
    ]
   },
   {
@@ -151,7 +150,7 @@
    "source": [
     "## Caveats\n",
     "\n",
-    "If K-Means were perfect, we could stop here. But unfortunately, while elegant, this algorithm does come with its own set of problems. For example, the random seed used to initialize the clusters can affect the results - there is no guarantee that the algorithm will find the best _possible_ solution.\n",
+    "If K-Means were perfect, we could stop here. But unfortunately, while elegant, this algorithm does come with its own set of problems. For example, the random seed used to initialize the clusters can affect the results - there is no guarantee that the algorithm will find the best _possible_ solution. (For an example of this, try changing the random seed in the previous example to `3`).\n",
     "\n",
     "Another common problem with K-Means is that you must tell it how many clusters to look for - it cannot learn this from the data. This is fine in simple, low-dimensional examples such as the one above, but when the data is high-dimensional it becomes impossible to eyeball the correct number of clusters for your data. In fact, we can pass any number of clusters to the algorithm and it won't complain:"
    ]
@@ -166,7 +165,8 @@
     "kmeans.fit(X)\n",
     "y_kmeans = kmeans.predict(X)\n",
     "\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=y_kmeans, s=50, cmap='viridis')"
+    "plt.scatter(X[:, 0], X[:, 1], c=y_kmeans, s=25, cmap='nipy_spectral')\n",
+    "plt.colorbar();"
    ]
   },
   {
@@ -242,7 +242,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The _elbow_ is the point in the line where improvement transitions from substantial to minimal. Now, you try on the Iris dataset from Lab 1. This data is 4-dimensional, so we can't plot it to quickly find the number of clusters. Instead, we need the Elbow. First, calculate the average distance to cluster centre for a range of K values, then identify the elbow."
+    "The _elbow_ is the point in the line where improvement transitions from substantial to minimal. Of course, such a clear elbow is not guaranteed - if your dataset doesn't cluster very well, it might be the case that there's no clear transition from good improvement to poor improvement. But in situations where there _is_ a good value for K waiting to be found, the Elbow method can help us consistently find it.\n",
+    "\n",
+    "Now, you try on the Iris dataset from Lab 1. This data is 4-dimensional, so we can't plot it to quickly find the number of clusters. Instead, we need the Elbow. First, calculate the average distance to cluster centre for a range of K values, then identify the elbow."
    ]
   },
   {
@@ -261,7 +263,7 @@
    "metadata": {},
    "source": [
     "**YOUR TURN**\n",
-    "* Using the Iris dataset, and the Elbow technique, identify the correct number of clusters and plot a graph showing the elbow."
+    "* Using the Iris dataset, and the Elbow technique, identify the best number of clusters and plot a graph showing the elbow."
    ]
   },
   {
@@ -395,7 +397,17 @@
     "pca.fit(X)\n",
     "X_pca = pca.transform(X)\n",
     "print(\"original shape:   \", X.shape)\n",
-    "print(\"transformed shape:\", X_pca.shape)\n"
+    "print(\"transformed shape:\", X_pca.shape)\n",
+    "plt.hist(X_pca,bins=20)\n",
+    "plt.xlabel('Value in reduced space')\n",
+    "plt.ylabel('Count');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we project our new, low-dimensional data back into the original space, we can get a good visual intuition of what PCA has done for us:"
    ]
   },
   {
@@ -414,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The light points are the original data, while the dark points are the projected version. This makes clear what a PCA dimensionality reduction means: the information along the least important principal axis or axes is removed, leaving only the component(s) of the data with the highest variance. The fraction of variance that is cut out (proportional to the spread of points about the line formed in this figure) is roughly a measure of how much \"information\" is discarded in this reduction of dimensionality.\n",
+    "The light points are the original data, while the orange points are the projected version. This makes clear what a PCA dimensionality reduction means: the information along the least important principal axis or axes is removed, leaving only the component(s) of the data with the highest variance. The fraction of variance that is cut out (proportional to the spread of points about the line formed in this figure) is roughly a measure of how much \"information\" is discarded in this reduction of dimensionality.\n",
     "\n",
     "This reduced-dimension dataset is in some senses \"good enough\" to encode the most important relationships between the points: despite reducing the dimension of the data by 50%, the overall relationship between the data points are mostly preserved.\n",
     "\n",
@@ -548,6 +560,7 @@
     "mnist = fetch_openml('mnist_784') #This could take a little while - it's a lot of data.\n",
     "X = mnist['data']\n",
     "y = mnist['target']\n",
+    "y = [int(t) for t in y]\n",
     "X.shape"
    ]
   },
@@ -555,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, use your knowledge of PCA to reduce MNIST to two dimensions and plot it, color coded by target value."
+    "First, we use our knowledge of PCA to reduce MNIST to two dimensions and plot it, color coded by target value."
    ]
   },
   {
@@ -566,7 +579,15 @@
    "source": [
     "plt.figure(figsize=(16,10));\n",
     "\n",
-    "###Your code here"
+    "pca = PCA(2)  # project from 64 to 2 dimensions\n",
+    "projected = pca.fit_transform(X)\n",
+    "\n",
+    "plt.scatter(projected[:, 0], projected[:, 1],\n",
+    "            c=y, edgecolor='none', alpha=0.5,\n",
+    "            cmap=plt.cm.get_cmap('nipy_spectral', 10))\n",
+    "plt.xlabel('component 1')\n",
+    "plt.ylabel('component 2')\n",
+    "plt.colorbar();"
    ]
   },
   {
@@ -622,7 +643,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Woah! Using t-SNE, the clusters are much more clearly defined, with different numbers being clearly separated in the low dimensional space. Running a clustering algorithm like K-Means now would likely give us pretty reasonable performance on classifying the digits, even just from two dimensions. "
+    "Woah! Using t-SNE, the clusters are much more clearly defined, with different numbers being clearly separated in the low dimensional space. Running a clustering algorithm like K-Means now would likely give us pretty reasonable performance on classifying the digits, even just from two dimensions. \n",
+    "\n",
+    "Congratulations! You're finished with this lab. For a more detailed introduction to t-SNE which dives into the math behind it, take a look [here](https://www.oreilly.com/learning/an-illustrated-introduction-to-the-t-sne-algorithm)."
    ]
   }
  ],
@@ -642,9 +665,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
