--- a/lab-2-2-pca.ipynb
+++ b/lab-2-2-pca.ipynb
@@ -557,7 +557,7 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_openml\n",
-    "mnist = fetch_openml('mnist_784') #This could take a little while - it's a lot of data.\n",
+    "mnist = fetch_openml('mnist_784',cache=False) #This could take a little while - it's a lot of data.\n",
     "X = mnist['data']\n",
     "y = mnist['target']\n",
     "y = [int(t) for t in y]\n",
@@ -606,7 +606,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "_,X,_,y = train_test_split(X,y,test_size=1/7)"
+    "#_,X,_,y = train_test_split(X,y,test_size=1/14)"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
