--- a/lab-3-1-neuralnets.ipynb
+++ b/lab-3-1-neuralnets.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,28 +414,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic NN test set accuracy: 71.27 after 4000 iterations\n",
-      "Logistic NN test set accuracy: 72.39 after 8000 iterations\n",
-      "Logistic NN test set accuracy: 72.39 after 12000 iterations\n",
-      "Logistic NN test set accuracy: 71.64 after 16000 iterations\n",
-      "Logistic NN test set accuracy: 72.76 after 20000 iterations\n",
-      "Logistic NN test set accuracy: 74.63 after 24000 iterations\n",
-      "Logistic NN test set accuracy: 77.99 after 28000 iterations\n",
-      "Logistic NN test set accuracy: 78.73 after 32000 iterations\n",
-      "Logistic NN test set accuracy: 80.22 after 36000 iterations\n",
-      "Logistic NN test set accuracy: 79.85 after 40000 iterations\n",
-      "Logistic NN test set accuracy: 79.48 after 44000 iterations\n",
-      "Logistic NN test set accuracy: 79.48 after 48000 iterations\n",
-      "Logistic NN test set accuracy: 79.10 after 52000 iterations\n",
-      "Logistic NN test set accuracy: 79.48 after 56000 iterations\n",
-      "Logistic NN test set accuracy: 79.48 after 60000 iterations\n"
+      "Logistic NN test set accuracy: 66.79 after 4000 iterations\n",
+      "Logistic NN test set accuracy: 66.79 after 8000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 12000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 16000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 20000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 24000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 28000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 32000 iterations\n",
+      "Logistic NN test set accuracy: 67.16 after 36000 iterations\n",
+      "Logistic NN test set accuracy: 67.54 after 40000 iterations\n",
+      "Logistic NN test set accuracy: 67.91 after 44000 iterations\n",
+      "Logistic NN test set accuracy: 68.28 after 48000 iterations\n",
+      "Logistic NN test set accuracy: 67.91 after 52000 iterations\n",
+      "Logistic NN test set accuracy: 69.03 after 56000 iterations\n",
+      "Logistic NN test set accuracy: 79.10 after 60000 iterations\n"
      ]
     }
    ],
@@ -478,20 +478,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[Parameter containing:\n",
-       " tensor([[ 0.0519,  4.9908, -0.0232,  0.5389,  0.1785, -0.0101],\n",
-       "         [-0.0523, -3.2392, -0.0981, -1.6221, -0.7108,  0.1835]],\n",
+       " tensor([[ 0.0408,  3.1902,  0.0730,  1.1189,  0.4527, -0.1262],\n",
+       "         [-0.1253, -4.6959,  0.0160, -0.6766,  0.0606,  0.0088]],\n",
        "        requires_grad=True), Parameter containing:\n",
-       " tensor([-1.0191,  1.3480], requires_grad=True)]"
+       " tensor([-1.1325,  1.3432], requires_grad=True)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,9 @@
     "**YOU TURN:**\n",
     "* What do you think these values represent? ____________________________\n",
     "* How many hidden layers does the architecture have? ______________________________\n",
-    "* Draw the architecture and label (some of) the weights (trained parameters). ______________________________"
+    "* Draw the architecture and label (some of) the weights (trained parameters). ______________________________\n",
+    "\n",
+    "(*Hint: to answer these questions, try printing `outputs.data[0]` and `predicted[0]` to look at the model's assessment of the first sample*)"
    ]
   },
   {
